Refactor(commands): More Java 15 migrations. Refactor(avatar): Re-make the avatar command to look prettier :)